Add wireguard multi instance with multi ip

--- a/roles/wireguard/templates/wg0.conf.j2
+++ b/roles/wireguard/templates/wg0.conf.j2
@@ -3,6 +3,7 @@ PrivateKey = {{ private_key_content }}
 Address = {{ tunnel_address }}
 ListenPort = {{ listen_port }}
 Table = off
+FwMark = {{ fwmark }}
 
 [Peer]
 PublicKey = {{ peer_public_key }}
