--- a/roles/calico/templates/bgpconfiguration.yaml.j2
+++ b/roles/calico/templates/bgpconfiguration.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: crd.projectcalico.org/v1
 kind: BGPConfiguration
 metadata:
-  name: {{ name }}
+  name: {{ bgp_config_name }}
 spec:
   asNumber: {{ asnumber }}
   bindMode: None
