--- a/roles/calico/templates/bgppeer.yaml.j2
+++ b/roles/calico/templates/bgppeer.yaml.j2
@@ -1,7 +1,7 @@
 apiVersion: crd.projectcalico.org/v1
 kind: BGPPeer
 metadata:
-  name: {{ name }}
+  name: {{ bgp_peer_name }}
 spec:
   asNumber: {{ asnumber }}
   keepOriginalNextHop: true
